<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_reg"
    tools:context=".ui.user.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_24sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_24sdp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/dalat"
        android:text="@string/welcome"
        android:textColor="#FFF"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dalat"
        android:text="@string/txt_reg"
        android:textColor="#FFF"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:textSize="@dimen/_12ssp"
        android:id="@+id/reg_edtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:background="@drawable/etc_bg"
        android:fontFamily="@font/dalat"
        android:hint="@string/username"
        android:padding="@dimen/_10sdp"
        android:textColor="#FFF"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="@string/username"
        android:inputType="text" />

    <EditText
        android:textSize="@dimen/_12ssp"
        android:id="@+id/reg_edtPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/etc_bg"
        android:fontFamily="@font/dalat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="#FFF"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/reg_edtUsername"
        android:autofillHints="@string/password" />

    <EditText
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/reg_edtMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/etc_bg"
        android:fontFamily="@font/dalat"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:textColor="#FFF"
        android:textColorHint="@color/login_form_details"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/reg_edtPass"
        android:autofillHints="@string/email_address" />

    <EditText
        android:textSize="@dimen/_12ssp"
        android:id="@+id/reg_edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/etc_bg"
        android:fontFamily="@font/dalat"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:padding="@dimen/_10sdp"
        android:textColor="#FFF"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/reg_edtMail"
        android:autofillHints="" />

    <Button
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/reg_btnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/dalat"
        android:text="@string/reg_now"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/reg_btnBack"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <Button
        android:layout_marginBottom="@dimen/_24sdp"
        android:id="@+id/reg_btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/dalat"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"/>

</androidx.constraintlayout.widget.ConstraintLayout>
